--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
  
                     <ul>
                       <li>
-                        <label for="name">Nombre:</label>
+                        <label for="name"> 👤 Nombre:</label>
                         <input type="text" id="name" name="user_name" />
                       </li>
                       <li>
-                        <label for="mail">Correo electrónico:</label>
+                        <label for="mail"> 📧 Correo electrónico:</label>
                         <input type="email" id="mail" name="user_mail" />
                       </li> <br>
 
                       <li>
-                        <label for="msg">Mensaje:</label>
+                        <label for="msg"> 📝 Mensaje:</label>
                         <textarea id="msg" name="user_message"></textarea>
                       </li>
                     </ul>
